# Android-Kernel-Prebuilts-Build-Tools

./: BUILD.bazel  build-prebuilts.sh  manifest.xml
