filegroup(
    name = "linux-x86",
    srcs = glob(["linux-x86/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linux-x86-libs",
    srcs = glob(["linux-x86/lib64/*.so"]),
    visibility = ["//visibility:public"],
)

exports_files([
    "linux-x86/bin/avbtool",
    "linux-x86/bin/certify_bootimg",
    "linux-x86/bin/stg",
    "linux-x86/bin/stgdiff",
])
